Bug 14076 - via-velocity: does not update non-IP counters
Summary: via-velocity: does not update non-IP counters
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Network (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Francois Romieu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-27 21:32 UTC by Jon Nelson
Modified: 2012-01-14 09:15 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Update Rx packets statistics (733 bytes, patch)
2009-08-31 22:25 UTC, Francois Romieu
Details | Diff
ethtool statistics support (2.67 KB, patch)
2009-08-31 22:26 UTC, Francois Romieu
Details | Diff

Description Jon Nelson 2009-08-27 21:32:22 UTC
When transferring data using a via velocity, the non-IP counters are not incremented. Most easily seen when using iptraf.  The counters are always zero.

Kernel: 2.6.27.31
Comment 1 Andrew Morton 2009-08-27 21:52:21 UTC
I assigned this to Francois.

2.6.27 is pretty old.
Comment 2 Francois Romieu 2009-08-31 22:25:06 UTC
Created attachment 22937 [details]
Update Rx packets statistics
Comment 3 Francois Romieu 2009-08-31 22:26:19 UTC
Created attachment 22938 [details]
ethtool statistics support
Comment 4 Francois Romieu 2009-08-31 22:29:09 UTC
Jon, can you try the patches above ?

The former patch should fix your problem and the latter ought to provide some
statistics through 'ethtool -S'.

-- 
Ueimor
Comment 5 Jon Nelson 2009-09-21 19:17:51 UTC
I have applied the patches (with some fuzz) to 2.6.27.29 and they work great.
Thanks!

iptraf (and ethtool -S) show numbers again.
Comment 6 Jon Nelson 2011-02-10 17:35:38 UTC
I have applied the patches to the *latest* git versions (with some fuzz) and they work great.

Applied as of 6148a47ac3872092d4bc4888838bec6dff16654d.
Comment 7 Florian Mickler 2012-01-12 21:22:23 UTC
A patch referencing this bug report has been merged in Linux v3.2-rc1:

commit 3cb7a7986ace516b97bb6bee2a78eba73e616a87
Author: françois romieu <romieu@fr.zoreil.com>
Date:   Thu Aug 4 02:37:55 2011 +0000

    via-velocity : update receive packets statistics.

Note You need to log in before you can comment on or make changes to this bug.