via-velocity : update receive packets statistics.

Addresses https://bugzilla.kernel.org/show_bug.cgi?id=14076.

Signed-off-by: Francois Romieu <romieu@fr.zoreil.com>
Tested-by: Jon Nelson <jnelson@jamponi.net>
Signed-off-by: David S. Miller <davem@davemloft.net>